src/scss/Wizard.scss
.wizard {
  @include card-style;
  background-position: bottom right;
  background-repeat: no-repeat;
  background-size: contain;
  padding: 20px 30px;
  position: relative;
}

.wizard-start {
  padding: 25px 0;
}

.wizard-title {
  @include header-three;
  font-weight: bold;
}

.wizard-start-btn {
  @include button-style;
  background: $openWhite;
  margin: auto 0;
}

.wizard-nav-btn {
  background-color: transparent;
  border: none;
  color: $openLawA11yBrown;
  cursor: pointer;
  font-size: 18px;
  font-weight: bold;
  line-height: 25px;

  &:hover {
    color: $openLawLightGreen;

    .wizard-nav-btn-icon > path {
      stroke: $openLawLightGreen;
    }
  }
}

.wizard-nav-btn-icon {
  margin-right: 15px;
  vertical-align: middle;

  > path {
    stroke: $openLawA11yBrown;
  }
}

.wizard-restart {
  margin-top: auto;
}

.wizard-step-content {
  align-items: flex-start;
  display: flex;
  flex-direction: column;
  min-height: 400px;
  padding: 55px 70px;
}

.wizard-question {
  @include header-five;
  font-weight: 600;
  font-style: italic;
}

.wizard-step-selected-option-content {
  @include header-five;
  font-weight: 600;
  font-style: italic;
}

.wizard-step-options {
  align-self: stretch;
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
}

.wizard-step-option {
  display: flex;
  flex-basis: 50%;
  margin-bottom: 20px;
}

.wizard-step-option-btn {
  background-color: white;
  border: 2px solid black;
  border-radius: 100%;
  cursor: pointer;
  flex: 0 0 auto;
  height: 24px;
  line-height: 1em;
  margin: 0 8px;
  width: 24px;

  &:hover {
    background-color: $openLawA11yTeal;
  }
}

.wizard-step-option-label {
  cursor: pointer;
  font-size: 18px;
  font-weight: bold;
  line-height: 25px;
}

@media (max-width: 1000px) {
  .wizard-step-content {
    min-height: 300px;
    padding: 20px 0;
  }
}

